# SpecCourse

./: .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
requirements/: dev.txt
spec_course/: notebook.ipynb
spec_course/configs/: evaluate_lm_eval.yaml  load_test.yaml  quantization.yaml  sd_setups.yaml
spec_course/database/: README.md  db.py  run.py  tables.yaml
spec_course/database/etl/: accuracy.py  base.py  load_test_metrics.py  sd_metrics.py
spec_course/scripts/: evaluate_accuracy.py  k6_script.js  load_test.py  proxy_server.js  quantize.py  run_load_test.py  run_sd.py  utils.py
