[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spec_course"
authors = [{name = "Barbara Suslova", email = "suslovavd2002@mail.ru"}]
version = "0.1.0"
dependencies = [
    "llmcompressor==0.5.1",
    "vllm==0.9.0",
    "pyyaml",
    "requests",
    "pre-commit",
    "ipykernel",
    "seaborn",
]
description = "Experiments with speculative decoding"
requires-python = ">=3.11"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["spec_course"]

[tool.hatch.envs.default]
dependencies = [
    "black",
    "isort",
]

[tool.black]
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.prettier]
semi = false
singleQuote = true
tabWidth = 2
